# OREMiner

./: .env.example  .gitignore  0.04_SOL_STRATEGY.md  CRITICAL_FIX_SNIPING.md  EMERGENCY_MOTHERLODE_STRATEGY.md  FIX_KEYPAIR.md  HIDDEN_PATTERNS_ANALYSIS.md  HOT_HAND_GOLDEN5_STRATEGY.md  LONG_TERM_ACCUMULATION_STRATEGY.md  OPTIMAL_STRATEGY_USAGE.md  ORE_COMPETITOR_ANALYSIS.md  QUICKSTART.md  QUICKSTART_AUTO_MINE.md  README.md  RESEARCH_GUIDE.md  SMALL_CAPITAL_STRATEGY.md  SPREAD_STRATEGY.md  START_MINING.md  STRATEGY_ANALYSIS.md  STRATEGY_ANALYSIS_FINAL.md  TRACKING_VERIFICATION.md  TUI_GUIDE.md  VERIFIED_PROFITABILITY.md  WEBSOCKET_TIMING_VERIFICATION.md  bet_sizing_analysis.md  convert_key.rs  deploy_optimal.sh  mine_websocket.sh  research_100_rounds.rs  run-tui.sh  setup_keypair.sh  setup_new_wallet.sh  square_count_analysis.md
cli/: Cargo.toml
cli/src/: deploy_continuous.rs  deploy_optimal_ev.rs  deploy_optimal_strategy.rs  deploy_single.rs  main.rs  optimal_strategy.rs  research_collector.rs  strategies.rs  (+2 more)
mining-pools/: Anchor.toml  BUSINESS_PLAN.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  LAUNCH_CHECKLIST.md  OPEN_QUESTIONS_RESOLVED.md  ORE_SDK_RESEARCH.md  QUICK_START_IMPLEMENTATION.md  README.md  RESEARCH_COMPLETE.md  SMART_CONTRACT_PROGRESS.md  STEEL_MIGRATION_PLAN.md
mining-pools/programs/mining-pool/: Cargo.toml
mining-pools/programs/mining-pool/src/: constants.rs  error.rs  lib.rs  lib_fixed.rs  lib_steel.rs  state.rs
mining-pools/programs/mining-pool/src/instructions/: checkpoint.rs  deposit.rs  initialize_pool.rs  mine.rs  mod.rs  withdraw.rs
(+5 files in other folders)
