[package]
name = "mining-pool"
version = "0.1.0"
description = "Trustless ORE Mining Pools"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mining_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
ore-api = { git = "https://github.com/regolith-labs/ore", branch = "master" }
entropy-api = "0.1.4"
steel = { version = "4.0.3", features = ["spl"] }
solana-program = "^2.1"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^6", features = ["no-entrypoint"] }
bincode = "1.3.3"
bytemuck = "1.14.3"
